# Biome

./: .prettierignore  Dockerfile  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/codeql/: codeql-config.yml
.github/workflows/: cd.yml  ci.yml  security.yml  test.yml
client/: index.html
client/src/: App.tsx  index.css  main.tsx
client/src/components/: Map.tsx
client/src/constants/: index.ts
client/src/pages/: AboutPage.tsx  AuthPage.tsx  ContactPage.tsx  (+9 more)
docs/: API_SPEC.md  ARCHITECTURE.md  ENV.md  TESTING.md  docs_README.md
payments-hs/: Dockerfile  deepenk-payments.cabal
payments-hs/app/: Main.hs
payments-hs/src/Payments/: Cashfree.hs  Config.hs  DB.hs  Server.hs  Types.hs  Util.hs  Webhook.hs
server/: index.ts
server/db/: mongo.ts
server/dto/: auth.ts  products.ts  search.ts
server/entities/: index.ts
server/middleware/: auth.ts  rateLimit.ts
server/realtime/: socket.ts
server/repositories/: inMemory.ts  index.ts  mongo.ts  priceAlerts.ts
server/routes/: ai.ts  api.ts  auth.test.ts  auth.ts  ecommerce.ts  food.test.ts  food.ts  health.test.ts  health.ts  notifications.ts  orders.test.ts  orders.ts  payments.test.ts  payments.ts  price.ts  products.ts  rides.test.ts  rides.ts  scrape.ts  search.test.ts  search.ts  users.test.ts  users.ts
server/services/: aiService.ts  cache.test.ts  cache.ts  foodService.ts  googleOAuth.ts  llmClient.test.ts  llmClient.ts  orderPaymentsSync.ts  otpSenders.ts  otpService.ts  otpStore.ts  priceService.ts  productService.ts  recommendationEngine.ts  ridesService.ts  searchEngine.ts
(+8 files in other folders)
