cabal-version: 3.0
name: deepenk-payments
version: 0.1.0.0
license: MIT
build-type: Simple

executable deepenk-payments
  hs-source-dirs: app, src
  main-is: Main.hs
  other-modules:
      Payments.Cashfree
    , Payments.Config
    , Payments.DB
    , Payments.Reconcile
    , Payments.Server
    , Payments.Types
    , Payments.Util
    , Payments.Webhook
  default-language: GHC2021
  ghc-options: -Wall -Werror
  build-depends:
      base ^>=4.18.0.0
    , aeson ^>=2.2
    , bytestring ^>=0.11
    , case-insensitive ^>=1.2
    , cryptonite ^>=0.30
    , http-client ^>=0.7
    , http-client-tls ^>=0.3
    , http-types ^>=0.12
    , memory ^>=0.18
    , mtl ^>=2.3
    , random ^>=1.2
    , scotty ^>=0.12
    , sqlite-simple ^>=0.4
    , text ^>=2.0
    , time ^>=1.12
    , transformers ^>=0.6
    , unordered-containers ^>=0.2
    , uuid ^>=1.3
    , wai ^>=3.2
    , warp ^>=3.3
    , base64-bytestring ^>=1.2